--- a/views/programas/centerBox/editarPrograma.phtml
+++ b/views/programas/centerBox/editarPrograma.phtml
@@ -185,25 +185,25 @@
                             <tr>
                                 <td>
                                     <div class="checkbox block">
-                                        <label><img src="<?php echo $_layoutParamsCB['ruta_iconos_hotel']; ?>restaurant.jpg" /><input type="checkbox" <?php if($this->hotel){ echo 'checked'; } ?> name="chkHotel" > Hotel</label>
+                                        <label><img src="<?php echo $_layoutParamsCB['ruta_iconos_hotel']; ?>hotel_ico.jpg" /><input type="checkbox" <?php if($this->hotel){ echo 'checked'; } ?> name="chkHotel" > Hotel</label>
                                     </div>
                                 </td>
                                 <td width="50">&nbsp;</td>
                                 <td>
                                     <div class="checkbox block">
-                                        <label><img src="<?php echo $_layoutParamsCB['ruta_iconos_hotel']; ?>lavanderia.jpg" /><input type="checkbox" <?php if($this->traslados){ echo 'checked'; } ?> name="chkTraslado" > Traslados</label>
+                                        <label><img src="<?php echo $_layoutParamsCB['ruta_iconos_hotel']; ?>transfer_ico.jpg" /><input type="checkbox" <?php if($this->traslados){ echo 'checked'; } ?> name="chkTraslado" > Traslados</label>
                                     </div>
                                 </td>
                                 <td  width="50">&nbsp;</td>
                                 <td>
                                     <div class="checkbox block">
-                                        <label><img src="<?php echo $_layoutParamsCB['ruta_iconos_hotel']; ?>lavanderia.jpg" /><input type="checkbox" <?php if($this->tkt_aereo){ echo 'checked'; } ?> name="chkTKT_Aereo" > TKT Aereo</label>
+                                        <label><img src="<?php echo $_layoutParamsCB['ruta_iconos_hotel']; ?>avion_ico.jpg" /><input type="checkbox" <?php if($this->tkt_aereo){ echo 'checked'; } ?> name="chkTKT_Aereo" > TKT Aereo</label>
                                     </div>
                                 </td>
                                 <td  width="50">&nbsp;</td>
                                 <td>
                                     <div class="checkbox block">
-                                        <label><img src="<?php echo $_layoutParamsCB['ruta_iconos_hotel']; ?>lavanderia.jpg" /><input type="checkbox" <?php if($this->seguro_viajes){ echo 'checked'; } ?> name="chkSeguroViajes" > Seguro de viajes</label>
+                                        <label><img src="<?php echo $_layoutParamsCB['ruta_iconos_hotel']; ?>seguro_ico.jpg" /><input type="checkbox" <?php if($this->seguro_viajes){ echo 'checked'; } ?> name="chkSeguroViajes" > Seguro de viajes</label>
                                     </div>
                                 </td>
                             </tr>
@@ -211,7 +211,7 @@
                                 <td colspan="7">
                                     <div class="checkbox block">
                                         <label>
-                                            <img src="<?php echo $_layoutParamsCB['ruta_iconos_hotel']; ?>restaurant.jpg" />
+                                            <img src="<?php echo $_layoutParamsCB['ruta_iconos_hotel']; ?>comida_ico.jpg" />
                                             <input type="checkbox" <?php if($this->EH_rest>0){ echo 'checked'; } ?> id="chkPlanAlimento" name="chkPlanAlimento" >
                                             <select id="cmbPlanAlimento" name="cmbPlanAlimento" <?php if($this->EH_rest==0){ echo 'disabled'; }?>>
                                                 <option value="1" <?php if($this->EH_rest==1) {echo 'selected';}?>>All Inclusive</option>
