--- a/views/programas/programas.phtml
+++ b/views/programas/programas.phtml
@@ -146,7 +146,7 @@
                                                             <?php } ?>
                                                         </td>
                                                         <td>
-                                                            <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" style="width: 269px;">
+                                                            <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" style="width:<?php if(!Session::get('sess_boton_pago')){?> 269px;<?php }else{?>100%;<?php } ?>">
                                                                 <tr >
                                                                     <!--<td style="font-size: 12px;">
                                                                         <?php if ($objProg->getAereo()) { ?><img src="<?php echo $_layoutParams['ruta_img']; ?>ok.png" width="16" style="margin-left:5px;" > Aereo <?php } ?>
