se agregan condiciones  generales en el imprimir y en la carta

--- a/views/bloqueos/centerBox/imprimir.phtml
+++ b/views/bloqueos/centerBox/imprimir.phtml
@@ -194,6 +194,12 @@
                 </table> 
             </div>
         </div>
+        <div class="row" style="margin-top: 24px; margin-bottom: 10px;">
+            <div class="col-lg-1"></div>
+            <div class="col-lg-10">
+                <?php echo $this->condicionesGenerales; ?>
+            </div>
+        </div>
     
 
     <center>
