--- a/views/pago/centerBox/fracaso.phtml
+++ b/views/pago/centerBox/fracaso.phtml
@@ -2,6 +2,6 @@
     <h2><strong>&iexcl;PAGO RECHAZADO!</strong></h2>    
     <br>
     <img src="<?php echo $_layoutParamsCB['ruta_img']; ?>error.png" align= "left" style="margin-right: 15px;">
-    <h4>Cont&aacute;ctese con su Agente de Viajes Travel Club</h4>
+    <h4>Cont&aacute;ctese con su Agente de Viajes Travel Club - ventasonline@travelclub.cl</h4>
     <h4><?php if (!$this->status) { echo $this->msj; } ?></h4>
 </div>
