Quitando "/" de sobra para evitar posibles problemas al abrir el voucher

--- a/views/cartas/travelclub.phtml
+++ b/views/cartas/travelclub.phtml
@@ -85,7 +85,7 @@
                                     </table>
                                     <br />
                                     
-                                    <center><h3><u><b><font face="calibri"><a href="<?php echo BASE_URL;?>/booking/voucher/<?php echo base64_encode($this->numFile);?>" target="_blank">Imprima sus Voucher </a></font></b></u></h3></center>
+                                    <center><h3><u><b><font face="calibri"><a href="<?php echo BASE_URL;?>booking/voucher/<?php echo base64_encode($this->numFile);?>" target="_blank">Imprima sus Voucher </a></font></b></u></h3></center>
                                         <hr noshade="noshade" />                                       </tr>
                                    
 
