se agregan validaciones de child en la vista de reserva en programas y se agrega suma de plan familiar y child en la reserva en la parte de programas

--- a/views/bloqueos/bloqueos.phtml
+++ b/views/bloqueos/bloqueos.phtml
@@ -157,7 +157,7 @@ if (Session::get('sess_iframe')) {
                                                                 echo Functions::invertirFecha($objProg->getDesde(), "/", "/");
                                                             }
                                                             ?></b><br>
-                                                <u style="color: #0061C9; line-height: 17px;"><b  data-animation="hover" data-placement="right" title="<h4><i>Incluye</i></h4>"data-content="<?php
+                                                <u style="color: #0061C9; line-height: 17px;"><b  data-animation="hover" data-placement="right" title="<h4><b>Incluye</b></h4>"data-content="<?php
                                                     $P_var_getIncluye = $objProg->getIncluye();
                                                     if ($P_var_getIncluye) {
                                                         $xx = 0;
