--- a/views/programas/centerBox/detallePasajeros.phtml
+++ b/views/programas/centerBox/detallePasajeros.phtml
@@ -200,7 +200,7 @@
                                                 changeYear: true,
                                                 dateFormat: 'dd/mm/yy',
                                                 firstDay: 1,
-                                                yearRange: "-100:+0",
+                                                yearRange: "-<?php echo Session::get('sessRP_edadChd'. $j)?>:+0",
                                                 dayNamesMin: ['Do', 'Lu', 'Ma', 'Mi', 'Ju', 'Vi', 'Sa'],
                                                 monthNamesShort: ['Ene', 'Feb', 'Mar', 'Abr',
                                                     'May', 'Jun', 'Jul', 'Ago',
