--- a/views/programas/programas.phtml
+++ b/views/programas/programas.phtml
@@ -4,7 +4,19 @@
     $(function () {
         $("[name$='tooltip_hotel']").poshytip({className: "tip-darkgray", alignY: "bottom"});
     });
+    $(document).ready(function(){
+       $('.blink').each(function () {
+        var elem = $(this);
+        setInterval(function () {
+
+            elem.animate({opacity: 0}, 400);
+            elem.animate({opacity: 1}, 400);
+
+        }, 1000);
+    }); 
+    });
 </script>
+
 
 
 <!-- Tooltip Detalle Hotel -->
@@ -128,6 +140,10 @@
                                     <div class="panel-heading" >
 
                                         <?php echo $objProg->getTitulo(); ?>
+                                        
+                                       <?php if ($objProg->getEstado() == 'AVAILABLE') { ?>
+                                            <div class="blink" style="float: right;"><button class="btn btn-warning btn-sm" > &iexcl; DISPONIBLE ! </button><?php //echo $objOpcProg->getEstado();  ?></div>
+                                         <?php } ?>
 
                                     </div>
                                     <div class="panel-body">
