--- a/views/booking/centerBox/cartaConfirm.phtml
+++ b/views/booking/centerBox/cartaConfirm.phtml
@@ -19,7 +19,7 @@
         <table width="100%" border="0" align="center" cellpadding="0" cellspacing="0">	  
             <tr>
                 <td align="left">
-                    <img src="<?php echo $_layoutParamsCB['ruta_img']; ?>logo.jpg" alt="ALLWAYS" height="100" vspace="5" border="0" />
+                    <img src="<?php echo $_layoutParamsCB['ruta_img']; ?>logo.jpg" height="100" vspace="5" border="0" />
                 </td>
                 <td width="50%" align="right" class="TopBot">
                     <strong class="TopBot">
